level-zero/1.0.4/_sources/tools/api.rst.txt


==============================
Tools API
==============================
oneAPI Level Zero Specification - Version 1.0.4.46

 

 

Common
============================================================
* Enumerations


    * :ref:`zet-structure-type-t`
    * :ref:`zet-value-type-t`

 
* Structures


    * :ref:`zet-base-properties-t`
    * :ref:`zet-base-desc-t`
    * :ref:`zet-value-t`
    * :ref:`zet-typed-value-t`




Common Enums
------------------------------------------------------------------------------


.. _zet-structure-type-t:

zet_structure_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_structure_type_t
    :project: LevelZero


.. _zet-value-type-t:

zet_value_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_value_type_t
    :project: LevelZero

 
Common Structures
------------------------------------------------------------------------------

.. _zet-base-properties-t:

zet_base_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_base_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-base-desc-t:

zet_base_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_base_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-value-t:

zet_value_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenunion:: zet_value_t
    :project: LevelZero

.. _zet-typed-value-t:

zet_typed_value_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_typed_value_t
    :project: LevelZero
    :members:
    :undoc-members:


 

 

 




 

 

 

 




 

 

 

 




 

 

Module
============================================================
* Functions


    * :ref:`zetModuleGetDebugInfo`

 
* Enumerations


    * :ref:`zet-module-debug-info-format-t`

 


Module Functions
------------------------------------------------------------------------------


.. _zetModuleGetDebugInfo:

zetModuleGetDebugInfo
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetModuleGetDebugInfo
    :project: LevelZero



Module Enums
------------------------------------------------------------------------------


.. _zet-module-debug-info-format-t:

zet_module_debug_info_format_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_module_debug_info_format_t
    :project: LevelZero

 

 

Debug
============================================================
* Functions


    * :ref:`zetDeviceGetDebugProperties`
    * :ref:`zetDebugAttach`
    * :ref:`zetDebugDetach`
    * :ref:`zetDebugReadEvent`
    * :ref:`zetDebugAcknowledgeEvent`
    * :ref:`zetDebugInterrupt`
    * :ref:`zetDebugResume`
    * :ref:`zetDebugReadMemory`
    * :ref:`zetDebugWriteMemory`
    * :ref:`zetDebugGetRegisterSetProperties`
    * :ref:`zetDebugReadRegisters`
    * :ref:`zetDebugWriteRegisters`

 
* Enumerations


    * :ref:`zet-device-debug-property-flags-t`
    * :ref:`zet-debug-event-flags-t`
    * :ref:`zet-debug-event-type-t`
    * :ref:`zet-debug-detach-reason-t`
    * :ref:`zet-debug-memory-space-type-t`
    * :ref:`zet-debug-regset-type-t`
    * :ref:`zet-debug-regset-flags-t`

 
* Structures


    * :ref:`zet-device-debug-properties-t`
    * :ref:`zet-debug-config-t`
    * :ref:`zet-debug-event-info-detached-t`
    * :ref:`zet-debug-event-info-module-t`
    * :ref:`zet-debug-event-info-thread-stopped-t`
    * :ref:`zet-debug-event-info-t`
    * :ref:`zet-debug-event-t`
    * :ref:`zet-debug-memory-space-desc-t`
    * :ref:`zet-debug-regset-properties-t`


Debug Functions
------------------------------------------------------------------------------


.. _zetDeviceGetDebugProperties:

zetDeviceGetDebugProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDeviceGetDebugProperties
    :project: LevelZero


.. _zetDebugAttach:

zetDebugAttach
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugAttach
    :project: LevelZero


.. _zetDebugDetach:

zetDebugDetach
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugDetach
    :project: LevelZero


.. _zetDebugReadEvent:

zetDebugReadEvent
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugReadEvent
    :project: LevelZero


.. _zetDebugAcknowledgeEvent:

zetDebugAcknowledgeEvent
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugAcknowledgeEvent
    :project: LevelZero


.. _zetDebugInterrupt:

zetDebugInterrupt
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugInterrupt
    :project: LevelZero


.. _zetDebugResume:

zetDebugResume
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugResume
    :project: LevelZero


.. _zetDebugReadMemory:

zetDebugReadMemory
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugReadMemory
    :project: LevelZero


.. _zetDebugWriteMemory:

zetDebugWriteMemory
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugWriteMemory
    :project: LevelZero


.. _zetDebugGetRegisterSetProperties:

zetDebugGetRegisterSetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugGetRegisterSetProperties
    :project: LevelZero


.. _zetDebugReadRegisters:

zetDebugReadRegisters
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugReadRegisters
    :project: LevelZero


.. _zetDebugWriteRegisters:

zetDebugWriteRegisters
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetDebugWriteRegisters
    :project: LevelZero



Debug Enums
------------------------------------------------------------------------------


.. _zet-device-debug-property-flags-t:

zet_device_debug_property_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_device_debug_property_flag_t
    :project: LevelZero


.. _zet-debug-event-flags-t:

zet_debug_event_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_debug_event_flag_t
    :project: LevelZero


.. _zet-debug-event-type-t:

zet_debug_event_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_debug_event_type_t
    :project: LevelZero


.. _zet-debug-detach-reason-t:

zet_debug_detach_reason_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_debug_detach_reason_t
    :project: LevelZero


.. _zet-debug-memory-space-type-t:

zet_debug_memory_space_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_debug_memory_space_type_t
    :project: LevelZero


.. _zet-debug-regset-type-t:

zet_debug_regset_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_debug_regset_type_t
    :project: LevelZero


.. _zet-debug-regset-flags-t:

zet_debug_regset_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_debug_regset_flag_t
    :project: LevelZero

 
Debug Structures
------------------------------------------------------------------------------

.. _zet-device-debug-properties-t:

zet_device_debug_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_device_debug_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-debug-config-t:

zet_debug_config_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_debug_config_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-debug-event-info-detached-t:

zet_debug_event_info_detached_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_debug_event_info_detached_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-debug-event-info-module-t:

zet_debug_event_info_module_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_debug_event_info_module_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-debug-event-info-thread-stopped-t:

zet_debug_event_info_thread_stopped_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_debug_event_info_thread_stopped_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-debug-event-info-t:

zet_debug_event_info_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenunion:: zet_debug_event_info_t
    :project: LevelZero

.. _zet-debug-event-t:

zet_debug_event_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_debug_event_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-debug-memory-space-desc-t:

zet_debug_memory_space_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_debug_memory_space_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-debug-regset-properties-t:

zet_debug_regset_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_debug_regset_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Metric
============================================================
* Functions


    * :ref:`zetMetricGroupGet`
    * :ref:`zetMetricGroupGetProperties`
    * :ref:`zetMetricGroupCalculateMetricValues`
    * :ref:`zetMetricGet`
    * :ref:`zetMetricGetProperties`
    * :ref:`zetContextActivateMetricGroups`
    * :ref:`zetMetricStreamerOpen`
    * :ref:`zetCommandListAppendMetricStreamerMarker`
    * :ref:`zetMetricStreamerClose`
    * :ref:`zetMetricStreamerReadData`
    * :ref:`zetMetricQueryPoolCreate`
    * :ref:`zetMetricQueryPoolDestroy`
    * :ref:`zetMetricQueryCreate`
    * :ref:`zetMetricQueryDestroy`
    * :ref:`zetMetricQueryReset`
    * :ref:`zetCommandListAppendMetricQueryBegin`
    * :ref:`zetCommandListAppendMetricQueryEnd`
    * :ref:`zetCommandListAppendMetricMemoryBarrier`
    * :ref:`zetMetricQueryGetData`

 
* Enumerations


    * :ref:`zet-metric-group-sampling-type-flags-t`
    * :ref:`zet-metric-type-t`
    * :ref:`zet-metric-group-calculation-type-t`
    * :ref:`zet-metric-query-pool-type-t`

 
* Structures


    * :ref:`zet-metric-group-properties-t`
    * :ref:`zet-metric-properties-t`
    * :ref:`zet-metric-streamer-desc-t`
    * :ref:`zet-metric-query-pool-desc-t`


Metric Functions
------------------------------------------------------------------------------


.. _zetMetricGroupGet:

zetMetricGroupGet
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricGroupGet
    :project: LevelZero


.. _zetMetricGroupGetProperties:

zetMetricGroupGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricGroupGetProperties
    :project: LevelZero


.. _zetMetricGroupCalculateMetricValues:

zetMetricGroupCalculateMetricValues
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricGroupCalculateMetricValues
    :project: LevelZero


.. _zetMetricGet:

zetMetricGet
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricGet
    :project: LevelZero


.. _zetMetricGetProperties:

zetMetricGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricGetProperties
    :project: LevelZero


.. _zetContextActivateMetricGroups:

zetContextActivateMetricGroups
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetContextActivateMetricGroups
    :project: LevelZero


.. _zetMetricStreamerOpen:

zetMetricStreamerOpen
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricStreamerOpen
    :project: LevelZero


.. _zetCommandListAppendMetricStreamerMarker:

zetCommandListAppendMetricStreamerMarker
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetCommandListAppendMetricStreamerMarker
    :project: LevelZero


.. _zetMetricStreamerClose:

zetMetricStreamerClose
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricStreamerClose
    :project: LevelZero


.. _zetMetricStreamerReadData:

zetMetricStreamerReadData
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricStreamerReadData
    :project: LevelZero


.. _zetMetricQueryPoolCreate:

zetMetricQueryPoolCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricQueryPoolCreate
    :project: LevelZero


.. _zetMetricQueryPoolDestroy:

zetMetricQueryPoolDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricQueryPoolDestroy
    :project: LevelZero


.. _zetMetricQueryCreate:

zetMetricQueryCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricQueryCreate
    :project: LevelZero


.. _zetMetricQueryDestroy:

zetMetricQueryDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricQueryDestroy
    :project: LevelZero


.. _zetMetricQueryReset:

zetMetricQueryReset
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricQueryReset
    :project: LevelZero


.. _zetCommandListAppendMetricQueryBegin:

zetCommandListAppendMetricQueryBegin
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetCommandListAppendMetricQueryBegin
    :project: LevelZero


.. _zetCommandListAppendMetricQueryEnd:

zetCommandListAppendMetricQueryEnd
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetCommandListAppendMetricQueryEnd
    :project: LevelZero


.. _zetCommandListAppendMetricMemoryBarrier:

zetCommandListAppendMetricMemoryBarrier
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetCommandListAppendMetricMemoryBarrier
    :project: LevelZero


.. _zetMetricQueryGetData:

zetMetricQueryGetData
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetMetricQueryGetData
    :project: LevelZero



Metric Enums
------------------------------------------------------------------------------


.. _zet-metric-group-sampling-type-flags-t:

zet_metric_group_sampling_type_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_metric_group_sampling_type_flag_t
    :project: LevelZero


.. _zet-metric-type-t:

zet_metric_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_metric_type_t
    :project: LevelZero


.. _zet-metric-group-calculation-type-t:

zet_metric_group_calculation_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_metric_group_calculation_type_t
    :project: LevelZero


.. _zet-metric-query-pool-type-t:

zet_metric_query_pool_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_metric_query_pool_type_t
    :project: LevelZero

 
Metric Structures
------------------------------------------------------------------------------

.. _zet-metric-group-properties-t:

zet_metric_group_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_metric_group_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-metric-properties-t:

zet_metric_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_metric_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-metric-streamer-desc-t:

zet_metric_streamer_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_metric_streamer_desc_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-metric-query-pool-desc-t:

zet_metric_query_pool_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_metric_query_pool_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Pin
============================================================
* Functions


    * :ref:`zetKernelGetProfileInfo`

 
* Enumerations


    * :ref:`zet-profile-flags-t`
    * :ref:`zet-profile-token-type-t`

 
* Structures


    * :ref:`zet-profile-properties-t`
    * :ref:`zet-profile-free-register-token-t`
    * :ref:`zet-profile-register-sequence-t`


Pin Functions
------------------------------------------------------------------------------


.. _zetKernelGetProfileInfo:

zetKernelGetProfileInfo
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetKernelGetProfileInfo
    :project: LevelZero



Pin Enums
------------------------------------------------------------------------------


.. _zet-profile-flags-t:

zet_profile_flags_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_profile_flag_t
    :project: LevelZero


.. _zet-profile-token-type-t:

zet_profile_token_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_profile_token_type_t
    :project: LevelZero

 
Pin Structures
------------------------------------------------------------------------------

.. _zet-profile-properties-t:

zet_profile_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_profile_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-profile-free-register-token-t:

zet_profile_free_register_token_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_profile_free_register_token_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zet-profile-register-sequence-t:

zet_profile_register_sequence_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_profile_register_sequence_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Tracing
============================================================
* Functions


    * :ref:`zetTracerExpCreate`
    * :ref:`zetTracerExpDestroy`
    * :ref:`zetTracerExpSetPrologues`
    * :ref:`zetTracerExpSetEpilogues`
    * :ref:`zetTracerExpSetEnabled`

 
* Enumerations


    * :ref:`zet-api-tracing-exp-version-t`

 
* Structures


    * :ref:`zet-tracer-exp-desc-t`


Tracing Functions
------------------------------------------------------------------------------


.. _zetTracerExpCreate:

zetTracerExpCreate
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetTracerExpCreate
    :project: LevelZero


.. _zetTracerExpDestroy:

zetTracerExpDestroy
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetTracerExpDestroy
    :project: LevelZero


.. _zetTracerExpSetPrologues:

zetTracerExpSetPrologues
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetTracerExpSetPrologues
    :project: LevelZero


.. _zetTracerExpSetEpilogues:

zetTracerExpSetEpilogues
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetTracerExpSetEpilogues
    :project: LevelZero


.. _zetTracerExpSetEnabled:

zetTracerExpSetEnabled
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zetTracerExpSetEnabled
    :project: LevelZero



Tracing Enums
------------------------------------------------------------------------------


.. _zet-api-tracing-exp-version-t:

zet_api_tracing_exp_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zet_api_tracing_exp_version_t
    :project: LevelZero

 
Tracing Structures
------------------------------------------------------------------------------

.. _zet-tracer-exp-desc-t:

zet_tracer_exp_desc_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zet_tracer_exp_desc_t
    :project: LevelZero
    :members:
    :undoc-members:


